--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 					<div class="col-md-8 text text-center">
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h2 class="subheading">Bem vindo a</h2>
+							<h1 class="mb-4">Nicarágua</h1>
+							<p class="mb-4">Páis lindo e belo e gostoso e cheio de P-O-B-R-E-S.</p>
 							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
