--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
+						<div class="img mb-4" style="background-image: url(images/43c1671ac6744ac5c436785ad1ec6fe5.avif);"></div>
 						<div class="desc">
 							<h2 class="subheading">Bem vindo a</h2>
 							<h1 class="mb-4">Nicarágua</h1>
