--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h2 class="mb-4">Articles</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
+            <p>A Nicarágua é um país da América Central, conhecido por sua rica história, cultura e biodiversidade. Sua economia é baseada principalmente na agricultura, com o café e o tabaco entre seus principais produtos de exportação. Politicamente, o país tem enfrentado desafios de governança, com controvérsias em torno da administração do presidente Daniel Ortega. Além disso, a Nicarágua possui paisagens naturais impressionantes, como vulcões e lagos.</p>
           </div>
         </div>
     		<div class="row">
