atualizações na main

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html">Otávio<span>.</span></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html">Nicarágua<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
 						<div class="desc">
 							<h2 class="subheading">Bem vindo a</h2>
 							<h1 class="mb-4">Nicarágua</h1>
-							<p class="mb-4">Páis lindo e belo e gostoso e cheio de P-O-B-R-E-S.</p>
+							<p class="mb-4">A Nicarágua é um país da América Central, conhecido por sua rica história, cultura e biodiversidade. Sua economia é baseada principalmente na agricultura, com o café e o tabaco entre seus principais produtos de exportação. Politicamente, o país tem enfrentado desafios de governança, com controvérsias em torno da administração do presidente Daniel Ortega. Além disso, a Nicarágua possui paisagens naturais impressionantes, como vulcões e lagos.</p>
 							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h2 class="mb-4">Articles</h2>
-            <p>A Nicarágua é um país da América Central, conhecido por sua rica história, cultura e biodiversidade. Sua economia é baseada principalmente na agricultura, com o café e o tabaco entre seus principais produtos de exportação. Politicamente, o país tem enfrentado desafios de governança, com controvérsias em torno da administração do presidente Daniel Ortega. Além disso, a Nicarágua possui paisagens naturais impressionantes, como vulcões e lagos.</p>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
           </div>
         </div>
     		<div class="row">
