atualizações na main

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Elen - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Nicarágua</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -35,12 +35,13 @@
 			<h1 id="colorlib-logo"><a href="index.html">Nicarágua<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li class="colorlib-active"><a href="index.html">Home</a></li>
-					<li><a href="photography.html">Photography</a></li>
-					<li><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="colorlib-active"><a href="index.html">Início</a></li>
+					<li><a href="photography.html">Fotografia</a></li>
+					<li><a href="travel.html">Plano de Viagens</a></li>
+					<li><a href="fashion.html">Danças</a></li>
+					<li><a href="fashion.html">Economia</a></li>
+					<li><a href="about.html">Sobre</a></li>
+					<li><a href="contact.html">Comidas</a></li>
 				</ul>
 			</nav>
 
