--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 			<div class="colorlib-footer">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 			  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-				<ul>
+				<!--ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="#"><i class="icon-instagram"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-				</ul>
+				</ul-->
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
@@ -63,10 +63,10 @@
 					<div class="col-md-8 text text-center">
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Bem vindo a</h2>
+							<h2 class="subheading text-dark">Bem vindo a</h2>
 							<h1 class="mb-4">Nicarágua</h1>
-							<p class="mb-4">A Nicarágua é um país da América Central, conhecido por sua rica história, cultura e biodiversidade. Sua economia é baseada principalmente na agricultura, com o café e o tabaco entre seus principais produtos de exportação. Politicamente, o país tem enfrentado desafios de governança, com controvérsias em torno da administração do presidente Daniel Ortega. Além disso, a Nicarágua possui paisagens naturais impressionantes, como vulcões e lagos.</p>
-							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
+							<p class="mb-4 text-dark" >A Nicarágua é um país da América Central, com economia baseada na agricultura e desafios políticos sob a liderança de Daniel Ortega. É conhecida por suas paisagens naturais, incluindo vulcões e lagos.</p>
+							<p><a href="about.html" class="btn-custom text-dark">Saiba mais ... <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
