--- a/about.html
+++ b/about.html
@@ -32,15 +32,16 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html">elen<span>.</span></a></h1>
+      <h1 id="colorlib-logo"><a href="index.html">Nicarágua<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="photography.html">Photography</a></li>
-					<li><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
-					<li class="colorlib-active"><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="colorlib-active"><a href="index.html">Início</a></li>
+					<li><a href="photography.html">Fotografia</a></li>
+					<li><a href="travel.html">Plano de Viagens</a></li>
+					<li><a href="fashion.html">Danças</a></li>
+					<li><a href="fashion.html">Economia</a></li>
+					<li><a href="about.html">Sobre</a></li>
+					<li><a href="contact.html">Comidas</a></li>
 				</ul>
 			</nav>
 
@@ -62,13 +63,13 @@
 					<div class="col-md-8 text text-center">
 						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
 						<div class="desc">
-							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h2 class="subheading text-dark">Feira das Nações</h2>
+							<h1 class="mb-4">Nicarágua</h1>
+							<p class="mb-4 text-dark">A Nicarágua é um país da América Central, conhecido por sua rica história, cultura e biodiversidade. Sua economia é baseada principalmente na agricultura, com o café e o tabaco entre seus principais produtos de exportação. Politicamente, o país tem enfrentado desafios de governança, com controvérsias em torno da administração do presidente Daniel Ortega. Além disso, a Nicarágua possui paisagens naturais impressionantes, como vulcões e lagos.</p>
 							<ul class="ftco-social mt-3">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.aljazeera.com/news/2024/8/19/nicaragua-bans-1500-ngos-in-latest-crackdown-against-civil-society" target="_blank"><span class="icon-globe"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.hrw.org/world-report/2024/country-chapters/nicaragua" target="_blank"><span class="icon-book"></span></a></li>
+                <li class="ftco-animate"><a href="https://en.wikipedia.org/wiki/2024_in_Nicaragua" target="_blank"><span class="icon-info"></span></a></li>
               </ul>
 						</div>
 					</div>
