--- a/about.html
+++ b/about.html
@@ -82,11 +82,12 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li  class="colorlib-active"><a href="about.html">Sobre</a></li>
-          <li><a href="photography.html">Fotografia</a></li>
-          <li><a href="travel.html">Plano de Viagens</a></li>
-          <li><a href="fashion.html">Danças</a></li>
-          <li><a href="fashion.html">Economia</a></li>
-          <li><a href="contact.html">Comidas</a></li>
+					<li><a href="#">Cultura</a></li>
+					<li><a href="#">Fotografia</a></li>
+					<li><a href="#">Plano de Viagens</a></li>
+					<li><a href="#">Danças</a></li>
+					<li><a href="#">Economia</a></li>
+					<li><a href="#">Comidas</a></li>
         </ul>
       </nav>
 
