--- a/about.html
+++ b/about.html
@@ -80,15 +80,15 @@
       <h1 id="colorlib-logo"><a href="index.html">Nicarágua<span>.</span></a></h1>
       <nav id="colorlib-main-menu" role="navigation">
         <ul>
-          <li><a href="index.html">Início</a></li>
-          <li  class="colorlib-active"><a href="about.html">Sobre</a></li>
+					<li class="colorlib-active"><a href="index.html">Início</a></li>
+					<li><a href="about.html">Sobre</a></li>
 					<li><a href="#">Cultura</a></li>
-					<li><a href="#">Fotografia</a></li>
-					<li><a href="#">Plano de Viagens</a></li>
+					<li><a href="photography.html">Fotografia</a></li>
+					<li><a href="travel.html">Plano de Viagens</a></li>
 					<li><a href="#">Danças</a></li>
 					<li><a href="#">Economia</a></li>
 					<li><a href="#">Comidas</a></li>
-        </ul>
+				</ul>
       </nav>
 
       <div class="colorlib-footer">
