--- a/photography.html
+++ b/photography.html
@@ -32,15 +32,17 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html">elen<span>.</span></a></h1>
+			<h1 id="colorlib-logo"><a href="index.html">Nicaragua<span>.</span></a></h1>
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="colorlib-active"><a href="photography.html">Photography</a></li>
-					<li><a href="travel.html">Travel</a></li>
-					<li><a href="fashion.html">Fashion</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="colorlib-active"><a href="index.html">Início</a></li>
+					<li><a href="about.html">Sobre</a></li>
+					<li><a href="#">Cultura</a></li>
+					<li><a href="photography.html">Fotografia</a></li>
+					<li><a href="travel.html">Plano de Viagens</a></li>
+					<li><a href="#">Danças</a></li>
+					<li><a href="#">Economia</a></li>
+					<li><a href="#">Comidas</a></li>
 				</ul>
 			</nav>
 
