--- a/photography.html
+++ b/photography.html
@@ -62,7 +62,7 @@
 				<div class="photograhy">
 					<div class="row no-gutters">
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_1.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img1.webp);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 01</h3>
@@ -71,7 +71,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_2.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img2.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 02</h3>
@@ -80,7 +80,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_3.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img3.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 03</h3>
@@ -89,7 +89,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_4.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img4.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 04</h3>
@@ -98,7 +98,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_5.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img5.jpg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 05</h3>
@@ -107,7 +107,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_6.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img6.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 06</h3>
@@ -116,7 +116,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_7.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img7.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 07</h3>
@@ -125,7 +125,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_8.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img8.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 08</h3>
@@ -134,8 +134,8 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_9.jpg);">
-								<div class="overlay"></div>
+							<div class="overlay"></div>
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img9.jpeg);">
 								<div class="text text-center">
 									<h3>Work 09</h3>
 									<span>Technology</span>
@@ -143,7 +143,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_10.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img10.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 10</h3>
@@ -152,7 +152,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_11.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img11.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 11</h3>
@@ -161,7 +161,7 @@
 							</a>
 						</div>
 						<div class="col-md-3">
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/image_12.jpg);">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center" style="background-image: url(images/img12.jpeg);">
 								<div class="overlay"></div>
 								<div class="text text-center">
 									<h3>Work 12</h3>
@@ -172,17 +172,18 @@
 					</div>
 				</div>
 			</section>
+
 	    <footer class="ftco-footer ftco-bg-dark ftco-section">
 	      <div class="container px-md-5">
 	        <div class="row mb-5">
 	          <div class="col-md">
 	            <div class="ftco-footer-widget mb-4 ml-md-4">
-	              <h2 class="ftco-heading-2">Category</h2>
+	              <h2 class="ftco-heading-2">Categoria</h2>
 	              <ul class="list-unstyled categories">
-	                <li><a href="#">Photography <span>(6)</span></a></li>
+	                <li><a href="#">Fotografia <span>(6)</span></a></li>
 	                <li><a href="#">Fashion <span>(8)</span></a></li>
-	                <li><a href="#">Technology <span>(2)</span></a></li>
-	                <li><a href="#">Travel <span>(2)</span></a></li>
+	                <li><a href="#">Tecnologia <span>(2)</span></a></li>
+	                <li><a href="#">Viajem <span>(2)</span></a></li>
 	              </ul>
 	            </div>
 	          </div>
@@ -190,17 +191,17 @@
 	             <div class="ftco-footer-widget mb-4">
 	              <h2 class="ftco-heading-2">Archives</h2>
 	              <ul class="list-unstyled categories">
-	              	<li><a href="#">October 2018 <span>(6)</span></a></li>
-	                <li><a href="#">September 2018 <span>(6)</span></a></li>
-	                <li><a href="#">August 2018 <span>(8)</span></a></li>
-	                <li><a href="#">July 2018 <span>(2)</span></a></li>
-	                <li><a href="#">June 2018 <span>(7)</span></a></li>
+	              	<li><a href="#">Outubro 2018 <span>(6)</span></a></li>
+	                <li><a href="#">Setembro 2018 <span>(6)</span></a></li>
+	                <li><a href="#">Agosto 2018 <span>(8)</span></a></li>
+	                <li><a href="#">Julho 2018 <span>(2)</span></a></li>
+	                <li><a href="#">Junho 2018 <span>(7)</span></a></li>
 	              </ul>
 	            </div>
 	          </div>
 	          <div class="col-md">
 	            <div class="ftco-footer-widget mb-4">
-	            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+	            	<h2 class="ftco-heading-2">Duvidas?</h2>
 	            	<div class="block-23 mb-3">
 		              <ul>
 		                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
