instalação dos apps de aula

--- a/install.html
+++ b/install.html
@@ -12,7 +12,7 @@
         
         <h2>Visual Studio</h2>
         <p>
-            O Visual Studio é um IDE <h4>(VERSÃO DA COR ROXA)</h4> popular para desenvolvimento de aplicações. Para instalá-lo, siga os passos:
+            O Visual Studio é um IDE <b>(VERSÃO DA COR ROXA)</b> popular para desenvolvimento de aplicações. Para instalá-lo, siga os passos:
         </p>
         <ol>
             <li>Acesse o site oficial: <a href="https://visualstudio.microsoft.com/" target="_blank">Visual Studio</a></li>
