instalação dos apps de aula

--- a/install.html
+++ b/install.html
@@ -53,7 +53,7 @@
         </ol>
 
         <footer class="text-center mt-4">
-            <p>© 2024 Instruções de Instalação. Todos os direitos reservados.</p>
+            <p>© 2024 Instruções de Instalação.</p>
         </footer>
     </div>
 
