--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+    <!-- Bootstrap Icons (via CDN) -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
@@ -25,45 +27,70 @@
 
 <body>
 
-	<!-- Botão de Música -->
-	<style>
-		/* Estilização opcional para o botão de controle */
-		.audio-control {
-			position: fixed;
-			bottom: 20px;
-			right: 20px;
-			z-index: 1000;
-		}
-	</style>
 
-	<audio id="background-music" loop>
-		<source src="audio/07 los chicos de ayer.mp3" type="audio/mpeg">
-		Seu navegador não suporta o elemento de áudio.
-	</audio>
 
-	<!-- Controles de Áudio (Opcional) -->
-	<div class="audio-control">
-		<button class="btn btn-primary" onclick="toggleMusic()">
-			<span id="music-icon" class="icon-play-circle"></span> Música
-		</button>
+	<!-- Playlist de Música -->
+	<div class="container-fluid position-fixed bottom-0 end-0 p-3"
+		style="max-width: 350px; z-index: 9999; bottom: 0; right: 0;">
+		<div class="card shadow-sm">
+			<div class="card-header bg-primary text-white text-center">
+				<h5 class="mb-0">Músicas Nicaragua</h5>
+			</div>
+			<div class="card-body overflow-auto" style="max-height: 300px;">
+				<div id="playlist-container" class="list-group"></div>
+			</div>
+		</div>
 	</div>
 
-	<!-- Script para Controlar a Música -->
+	<!-- Script para carregar e controlar a playlist -->
 	<script>
-		function toggleMusic() {
-			var music = document.getElementById("background-music");
-			var icon = document.getElementById("music-icon");
-			if (music.paused) {
-				music.play();
-				icon.classList.remove("icon-play-circle");
-				icon.classList.add("icon-pause-circle");
+		const audioFiles = [
+			{ name: "Hino Nacional da Nicaragua", src: "audio/hino.mp3" },
+			{ name: "Los Chicos de Ayer", src: "audio/07 los chicos de ayer.mp3" }
+		];
+
+		function renderPlaylist() {
+			const container = document.getElementById('playlist-container');
+			audioFiles.forEach((file, index) => {
+				const audioItem = document.createElement('div');
+				audioItem.classList.add('list-group-item', 'd-flex', 'justify-content-between', 'align-items-center');
+				audioItem.innerHTML = `
+                <span>${file.name}</span>
+                <button class="btn btn-sm btn-outline-primary" id="play-pause-${index}" onclick="togglePlay(${index})">
+                    <i class="bi bi-play-circle" id="icon-${index}"></i>
+                </button>
+                <audio id="audio-${index}" src="${file.src}"></audio>
+            `;
+				container.appendChild(audioItem);
+			});
+		}
+
+		function togglePlay(index) {
+			const audio = document.getElementById(`audio-${index}`);
+			const icon = document.getElementById(`icon-${index}`);
+			if (audio.paused) {
+				stopAllAudios();
+				audio.play();
+				icon.classList.replace('bi-play-circle', 'bi-pause-circle');
 			} else {
-				music.pause();
-				icon.classList.remove("icon-pause-circle");
-				icon.classList.add("icon-play-circle");
+				audio.pause();
+				icon.classList.replace('bi-pause-circle', 'bi-play-circle');
 			}
 		}
+
+		function stopAllAudios() {
+			audioFiles.forEach((_, index) => {
+				const audio = document.getElementById(`audio-${index}`);
+				const icon = document.getElementById(`icon-${index}`);
+				audio.pause();
+				audio.currentTime = 0;
+				icon.classList.replace('bi-pause-circle', 'bi-play-circle');
+			});
+		}
+
+		window.onload = renderPlaylist;
 	</script>
+
 
 
 	<div id="colorlib-page">
@@ -75,12 +102,17 @@
 					<li class="colorlib-active"><a href="index.html">Início</a></li>
 					<li><a href="about.html">Sobre</a></li>
 					<li><a href="photography.html">Fotografia</a></li>
-					<li><a href="#" class="open-modal" data-doc="docs/cultura.pdf" data-toggle="modal" data-target="#presentationModal">Cultura</a></li>
-					<li><a href="#" class="open-modal" data-doc="docs/dancas.pdf" data-toggle="modal" data-target="#presentationModal">Danças</a></li>			
-					<li><a href="#" class="open-modal" data-doc="docs/comidas.pdf" data-toggle="modal" data-target="#presentationModal">Comidas</a></li>
+					<li><a href="#" class="open-modal" data-doc="docs/cultura.pdf" data-toggle="modal"
+							data-target="#presentationModal">Cultura</a></li>
+					<li><a href="#" class="open-modal" data-doc="docs/dancas.pdf" data-toggle="modal"
+							data-target="#presentationModal">Danças</a></li>
+					<li><a href="#" class="open-modal" data-doc="docs/comidas.pdf" data-toggle="modal"
+							data-target="#presentationModal">Comidas</a></li>
 
-					<li><a href="#" class="open-modal" data-doc="docs/plano-viagem.pdf" data-toggle="modal" data-target="#presentationModal">Plano de Viagens</a></li>
-					<li><a href="#" class="open-modal" data-doc="docs/economia.pdf" data-toggle="modal" data-target="#presentationModal">Economia</a></li>
+					<li><a href="#" class="open-modal" data-doc="docs/plano-viagem.pdf" data-toggle="modal"
+							data-target="#presentationModal">Plano de Viagens</a></li>
+					<li><a href="#" class="open-modal" data-doc="docs/economia.pdf" data-toggle="modal"
+							data-target="#presentationModal">Economia</a></li>
 					<li><a href="geografia.html">Geografia</a></li>
 				</ul>
 			</nav>
@@ -119,7 +151,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<section class="ftco-section">
 				<div class="container">
 					<div class="row justify-content-center mb-5 pb-2">
@@ -243,7 +275,11 @@
 									<span class="category mb-3 d-block"><a href="#">Plano de Viajem</a></span>
 									<h3 class="mb-4"><a href="#">10 lugares mais incríveis</a></h3>
 									<!-- <p class="mb-4">Mesmo o todo-poderoso Apontador não tem controle sobre os textos cegos, é um quase</p> -->
-									<p class="mb-4">a Nicarágua, explore Granada e sua arquitetura colonial, León para arte e história, e o mercado de Masaya para artesanato. A Ilha de Ometepe oferece tradições locais, e San Juan del Sur é vibrante com festivais. A Catedral de León e Matagalpa com sua tradição cafeeira também são imperdíveis.</p>
+									<p class="mb-4">a Nicarágua, explore Granada e sua arquitetura colonial, León para
+										arte e história, e o mercado de Masaya para artesanato. A Ilha de Ometepe
+										oferece tradições locais, e San Juan del Sur é vibrante com festivais. A
+										Catedral de León e Matagalpa com sua tradição cafeeira também são imperdíveis.
+									</p>
 									<div class="author mb-4 d-flex align-items-center">
 										<a href="#" class="img" style="background-image: url(images/person_1.jpg);"></a>
 										<div class="ml-3 info">
@@ -273,7 +309,11 @@
 								<div class="text text-2 pt-2 mt-3">
 									<span class="category mb-3 d-block"><a href="#">Plano de Viajem</a></span>
 									<h3 class="mb-4"><a href="#">10 praias mais incríveis</a></h3>
-									<p class="mb-4">Na Nicarágua, experimente San Juan del Sur, Praia de Maderas e Popoyo para surfe. Playa Gigante e Costa Rica são perfeitas para relaxar. El Coco oferece atividades aquáticas, e Playa Marsella é bela e tranquila. Las Peñitas é ideal para o pôr do sol, Jiquilillo é um refúgio tranquilo, e La Flor é famosa pela desova de tartarugas.</p>
+									<p class="mb-4">Na Nicarágua, experimente San Juan del Sur, Praia de Maderas e
+										Popoyo para surfe. Playa Gigante e Costa Rica são perfeitas para relaxar. El
+										Coco oferece atividades aquáticas, e Playa Marsella é bela e tranquila. Las
+										Peñitas é ideal para o pôr do sol, Jiquilillo é um refúgio tranquilo, e La Flor
+										é famosa pela desova de tartarugas.</p>
 									<div class="author mb-4 d-flex align-items-center">
 										<a href="#" class="img" style="background-image: url(images/person_2.jpg);"></a>
 										<div class="ml-3 info">
@@ -303,7 +343,11 @@
 								<div class="text text-2 pt-2 mt-3">
 									<span class="category mb-3 d-block"><a href="#">Plano de Viajem</a></span>
 									<h3 class="mb-4"><a href="#">Top 10 Lugares incríveis para ir no verão</a></h3>
-									<p class="mb-4">No verão, explore Granada e sua arquitetura colonial, León para cultura, e San Juan del Sur para praias. A Ilha de Ometepe é ideal para a natureza, e Masaya oferece mercado e vulcão. As praias de Maderas e Popoyo são perfeitas para surfe. Estelí é ótima para charutos, e Jiquilillo é um refúgio tranquilo.</p>
+									<p class="mb-4">No verão, explore Granada e sua arquitetura colonial, León para
+										cultura, e San Juan del Sur para praias. A Ilha de Ometepe é ideal para a
+										natureza, e Masaya oferece mercado e vulcão. As praias de Maderas e Popoyo são
+										perfeitas para surfe. Estelí é ótima para charutos, e Jiquilillo é um refúgio
+										tranquilo.</p>
 									<div class="author mb-4 d-flex align-items-center">
 										<a href="#" class="img" style="background-image: url(images/person_3.jpg);"></a>
 										<div class="ml-3 info">
@@ -585,48 +629,123 @@
 		</svg></div>
 
 
-<!-- Modal para Visualizar Apresentações -->
-<div class="modal fade" id="presentationModal" tabindex="-1" role="dialog" aria-labelledby="presentationModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="presentationModalLabel">Visualizador</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!-- Visualizador de PDF/PPT -->
-                <iframe id="presentationFrame" src="" width="100%" height="500px"></iframe>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                <button type="button" class="btn btn-primary" onclick="openFullScreen()">Tela cheia</button>
-            </div>
-        </div>
-    </div>
-</div>
 
-<!-- JavaScript para controlar a exibição do modal -->
-<script>
-    document.querySelectorAll('.open-modal').forEach(item => {
-        item.addEventListener('click', event => {
-            const docUrl = event.currentTarget.getAttribute('data-doc');
-            document.getElementById('presentationFrame').src = docUrl;
-        });
-    });
 
-    function openFullScreen() {
-        const elem = document.getElementById('presentationFrame');
-        if (elem.requestFullscreen) {
-            elem.requestFullscreen();
-        } else if (elem.webkitRequestFullscreen) { /* Safari */
-            elem.webkitRequestFullscreen();
-        } else if (elem.msRequestFullscreen) { /* IE11 */
-            elem.msRequestFullscreen();
-        }
-    }
-</script>
+	<!-- Playlist de Música -->
+	<div class="container-fluid position-fixed bottom-0 end-0 p-3" style="max-width: 350px;">
+		<div class="card shadow-sm">
+			<div class="card-header bg-primary text-white text-center">
+				<h5 class="mb-0">Músicas Nicaragua</h5>
+			</div>
+			<div class="card-body overflow-auto" style="max-height: 300px;">
+				<div id="playlist-container" class="list-group"></div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Script para carregar e controlar a playlist -->
+	<script>
+		// Lista de arquivos disponíveis (simulação de arquivos na pasta 'audio/')
+		const audioFiles = [
+			{ name: "Hino Nacional da Nicaragua", src: "audio/hino.mp3" },
+			{ name: "Los Chicos de Ayer", src: "audio/07 los chicos de ayer.mp3" }
+		];
+
+		// Função para renderizar a playlist
+		function renderPlaylist() {
+			const container = document.getElementById('playlist-container');
+			audioFiles.forEach((file, index) => {
+				const audioItem = document.createElement('div');
+				audioItem.classList.add('list-group-item', 'd-flex', 'justify-content-between', 'align-items-center');
+				audioItem.innerHTML = `
+				<span>${file.name}</span>
+				<button class="btn btn-sm btn-outline-primary" id="play-pause-${index}" onclick="togglePlay(${index})">
+					<i class="bi bi-play-circle" id="icon-${index}"></i>
+				</button>
+				<audio id="audio-${index}" src="${file.src}"></audio>
+			`;
+				container.appendChild(audioItem);
+			});
+		}
+
+		// Função para alternar entre play e pause para o áudio específico
+		function togglePlay(index) {
+			const audio = document.getElementById(`audio-${index}`);
+			const icon = document.getElementById(`icon-${index}`);
+			if (audio.paused) {
+				stopAllAudios(); // Pausar todos os outros áudios
+				audio.play();
+				icon.classList.replace('bi-play-circle', 'bi-pause-circle');
+			} else {
+				audio.pause();
+				icon.classList.replace('bi-pause-circle', 'bi-play-circle');
+			}
+		}
+
+		// Função para pausar todos os áudios
+		function stopAllAudios() {
+			audioFiles.forEach((_, index) => {
+				const audio = document.getElementById(`audio-${index}`);
+				const icon = document.getElementById(`icon-${index}`);
+				audio.pause();
+				audio.currentTime = 0; // Reinicia o áudio
+				icon.classList.replace('bi-pause-circle', 'bi-play-circle');
+			});
+		}
+
+		// Renderizar a playlist ao carregar a página
+		window.onload = renderPlaylist;
+	</script>
+
+
+
+
+
+	<!-- Modal para Visualizar Apresentações -->
+	<div class="modal fade" id="presentationModal" tabindex="-1" role="dialog" aria-labelledby="presentationModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="presentationModalLabel">Visualizador</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<!-- Visualizador de PDF/PPT -->
+					<iframe id="presentationFrame" src="" width="100%" height="500px"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+					<button type="button" class="btn btn-primary" onclick="openFullScreen()">Tela cheia</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- JavaScript para controlar a exibição do modal -->
+	<script>
+		document.querySelectorAll('.open-modal').forEach(item => {
+			item.addEventListener('click', event => {
+				const docUrl = event.currentTarget.getAttribute('data-doc');
+				document.getElementById('presentationFrame').src = docUrl;
+			});
+		});
+
+		function openFullScreen() {
+			const elem = document.getElementById('presentationFrame');
+			if (elem.requestFullscreen) {
+				elem.requestFullscreen();
+			} else if (elem.webkitRequestFullscreen) { /* Safari */
+				elem.webkitRequestFullscreen();
+			} else if (elem.msRequestFullscreen) { /* IE11 */
+				elem.msRequestFullscreen();
+			}
+		}
+	</script>
+
+
 
 
 	<script src="js/jquery.min.js"></script>
@@ -643,9 +762,11 @@
 	<script src="js/bootstrap-datepicker.js"></script>
 	<script src="js/jquery.timepicker.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	<script src="js/google-map.js"></script>
 	<script src="js/main.js"></script>
+
 
 </body>
 
