visualização de imagens

--- a/photography.html
+++ b/photography.html
@@ -73,126 +73,141 @@
 			<section class="ftco-section-2">
 				<div class="photograhy">
 					<div class="row no-gutters">
+
+
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img1.webp);">
+								style="background-image: url('images/img1.webp');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 01</h3>
-									<span>Technology</span>
+									<h3>Imagem 1</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img2.jpg);">
+								style="background-image: url('images/img2.jpg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 02</h3>
-									<span>Nature</span>
+									<h3>Imagem 2</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img3.jpeg);">
+								style="background-image: url('images/img3.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 03</h3>
-									<span>Fashion</span>
+									<h3>Imagem 3</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img4.jpeg);">
+								style="background-image: url('images/img4.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 04</h3>
-									<span>Travel</span>
+									<h3>Imagem 4</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img5.jpg);">
+								style="background-image: url('images/img5.jpg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 05</h3>
-									<span>Travel</span>
+									<h3>Imagem 5</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img6.jpeg);">
+								style="background-image: url('images/img6.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 06</h3>
-									<span>Travel</span>
+									<h3>Imagem 6</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img7.jpeg);">
+								style="background-image: url('images/img7.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 07</h3>
-									<span>Fashion, Model</span>
+									<h3>Imagem 7</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img8.jpeg);">
+								style="background-image: url('images/img8.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 08</h3>
-									<span>Nature</span>
+									<h3>Imagem 8</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
-						<div class="col-md-3">
-							<div class="overlay"></div>
-							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img9.jpeg);">
-								<div class="text text-center">
-									<h3>Work 09</h3>
-									<span>Technology</span>
-								</div>
-							</a>
-						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img10.jpeg);">
+								style="background-image: url('images/img9.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 10</h3>
-									<span>Model</span>
+									<h3>Imagem 9</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img11.jpeg);">
+								style="background-image: url('images/img10.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 11</h3>
-									<span>Fashion</span>
+									<h3>Imagem 10</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+
 						<div class="col-md-3">
 							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
-								style="background-image: url(images/img12.jpeg);">
+								style="background-image: url('images/img11.jpeg');">
 								<div class="overlay"></div>
 								<div class="text text-center">
-									<h3>Work 12</h3>
-									<span>Photography</span>
+									<h3>Imagem 11</h3>
+									<span>Nicaragua</span>
 								</div>
 							</a>
 						</div>
+				
+						<div class="col-md-3">
+							<a href="#" class="photography-entry img d-flex justify-content-center align-items-center"
+								style="background-image: url('images/img12.jpeg');">
+								<div class="overlay"></div>
+								<div class="text text-center">
+									<h3>Imagem 12</h3>
+									<span>Nicaragua</span>
+								</div>
+							</a>
+						</div>
+						
 					</div>
 				</div>
 			</section>
@@ -265,6 +280,60 @@
 
 
 
+
+
+
+
+
+	<!-- Modal para Visualização de Imagens -->
+	<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel"
+		aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-body p-0">
+					<img id="modalImage" src="" alt="Imagem" style="width: 100%; height: auto;" />
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	</div>
+
+
+
+	<script>
+		// Abrir imagem no modal ao clicar
+		document.querySelectorAll('.photography-entry').forEach(item => {
+			item.addEventListener('click', event => {
+				event.preventDefault();
+				const bgImage = item.style.backgroundImage;
+				const imageUrl = bgImage.slice(5, -2); // Extrai a URL da imagem do estilo inline
+				document.getElementById('modalImage').src = imageUrl;
+				$('#imageModal').modal('show'); // Exibe o modal
+			});
+		});
+	</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<!-- Modal para Visualizar Apresentações -->
 	<div class="modal fade" id="presentationModal" tabindex="-1" role="dialog" aria-labelledby="presentationModalLabel"
 		aria-hidden="true">
@@ -308,6 +377,38 @@
 			}
 		}
 	</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<!-- Scripts -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
 
 	<script src="js/jquery.min.js"></script>
