visualização de imagens

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<!-- Script para carregar e controlar a playlist -->
 	<script>
 		const audioFiles = [
-			{ name: "Hino Nacional da Nicaragua", src: "audio/hino.mp3" },
+			{ name: "Hino Nacional da Nicaragua", src: "audio/hino.MP3" },
 			{ name: "Los Chicos de Ayer", src: "audio/07 los chicos de ayer.mp3" }
 		];
 
